@@ -13,10 +13,10 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.63
+    version: 1.64
   TMMemHandle:
     file: lib/Term/Menus.pm
-  Term::Input:
+  Input:
     file: lib/Term/Menus.pm
 requires:
   Data::Dump::Streamer: 0
@@ -25,4 +25,4 @@ requires:
 #  Term::Input: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.63
+version: 1.64
